实验数据和结果/GenProg4Java/JacksonCore/21b/logSeed5.txt
0 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
27 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
#Thu Feb 25 15:50:19 CST 2021
negativeTestWeight=2.0
classSourceFolder=/home/rtx/repair/d4j/JacksonCore/21b/target/classes
model=default
sampleStrategy=variant
srcClassPath=/home/rtx/repair/d4j/JacksonCore/21b/target/classes
sourceVersion=1.8
popsize=40
regenPaths=false
posCoverageFile=coverage.path.pos
continue=false
edits=APPEND;DELETE;REPLACE
negCoverageFile=coverage.path.neg
workingDir=/home/rtx/repair/d4j/JacksonCore/21b/
clearTestCache=false
skipFailedSanity=false
sample=0.1 
oracleGenome=
testGranularity=class
justTestingFaultLoc=false
faultLocStrategy=standardPathFile
crossp=0.5
pMutation=1
generations=10
positiveTests=/home/rtx/repair/d4j/JacksonCore/21b/pos.tests
javaVM=/home/rtx/java/jdk1.8.0_271/jre/bin/java
seed=5
negativePathWeight=0.35
compileCommand=
fixStrategy=classScope
allowCoverageFail=false
targetClassName=/home/rtx/repair/d4j/JacksonCore/21b/bugfiles.txt
javaRuntime=java.lang.Runtime@6576fe71
classTestFolder=
modelPath=OVERALLModel.txt
sanity=yes
positivePathWeight=0.65
jacocoPath=/home/rtx/eclipse-workspace/genprog4java/lib/jacocoagent.jar
negativeTests=/home/rtx/repair/d4j/JacksonCore/21b/neg.tests
pathToFileHumanInjectedFaultLoc=fileHumanInjectedFaultLoc.txt
outputDir=/home/rtx/repair/d4j/JacksonCore/21b/genprog4java/variantSeed5/
testClassPath=/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/JacksonCore/21b/target/classes\:/home/rtx/repair/d4j/JacksonCore/21b/target/test-classes\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/junit/junit/4.11/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/junit/junit/4.8.2/junit-4.8.2.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/junit/junit/4.11/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/junit/junit/4.8.2/junit-4.8.2.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar
faultStrategy=classScope
sourceDir=src/main/java
checkSpace=false
search=gp
globalExtension=.java
faultSpaceSubSet=1/5
maxVariants=50
libs=/home/rtx/eclipse-workspace/genprog4java/lib/junittestrunner.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/commons-cli-20040117.000000.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/junit-4.12.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/hamcrest-core-1.3.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/log4j-1.2.17.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/JacksonCore/21b/target/classes\:/home/rtx/repair/d4j/JacksonCore/21b/target/test-classes\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/junit/junit/4.11/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/junit/junit/4.8.2/junit-4.8.2.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/junit/junit/4.11/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/junit/junit/4.8.2/junit-4.8.2.jar\:/home/rtx/repair/defects4j/framework/projects/JacksonCore/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/JacksonCore/21b/target/classes
crossover=onepoint
109 [main] INFO clegoues.genprog4java.main.Main  - Configuration file loaded
Deserialized fitnessCache HashMap
26317 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@9638d828
26318 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking begins
27055 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 1 out of 2
27301 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

27302 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 2 out of 2
27510 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

27510 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n1: 
27752 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

27752 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n2: 
27989 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

27989 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n3: 
28248 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

28249 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking completed (time taken = 1931)
28249 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Start Fault Localization
28289 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Finish Fault Localization
28289 [main] INFO clegoues.genprog4java.Search.Search  - search: genetic algorithm begins

28630 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 original (stored at: )
28849 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - com/fasterxml/jackson/core/filter/FilteringParserDelegate.java:641: error: incompatible types: TokenFilterContext cannot be converted to JsonToken
						return _exposedContext;
						       ^
1 error

28850 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(377,576) at variant0 fails to compile

28850 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(377,576) (stored at: variant0)
28855 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(245) (stored at: )
29310 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(169,241) (stored at: variant1)
29740 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(464,257) (stored at: variant2)
29744 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(450) (stored at: )
29829 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - com/fasterxml/jackson/core/filter/FilteringParserDelegate.java:904: error: undefined label: main_loop
            continue main_loop;
            ^
1 error

29829 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtReplace(578,351) at variant3 fails to compile

29830 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(578,351) (stored at: variant3)
29841 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(155) (stored at: )
29845 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 6.0 StmtDelete(62) (stored at: )
29845 [main] INFO clegoues.genprog4java.Search.Search  - 
Repair Found: StmtDelete(62) (in )

29942 [main] INFO clegoues.genprog4java.fitness.Fitness  - Serialized test cache to file testcache.ser
29942 [main] INFO clegoues.genprog4java.main.Main  - 
Total elapsed time: 29

